# polybar-clockify

./: .gitignore  LICENSE  README.rst  pyproject.toml
polybar_clockify/: api.py  app.py  db.py  objects.py  poll.py  settings.py  toggle_timer.py  utils.py
polybar_clockify/commands/: toggle_hide.py  toggle_timer.py
polybar_clockify/commands/utils/: unix_socket.py
