[tool.poetry]
name = "polybar-clockify"
version = "0.1.0"
description = "Quick access to control clockify through polybar"
authors = ["Wout De Puysseleir <woutdp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
isodate = "^0.6.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
