[tool.poetry]
name = "polybar-clockify"
version = "0.2.5"
description = "Control Clockify through Polybar"
authors = ["Wout De Puysseleir <woutdp@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/woutdp/polybar-clockify"
repository = "https://github.com/woutdp/polybar-clockify"
keywords = ["polybar", "clockify"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
isodate = "^0.6.0"
websockets = "^8.1"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
dataclasses-json = "^0.5.2"
marshmallow = "^3.10.0"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
polybar-clockify = "polybar_clockify.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
